# demo_app

app/: build.gradle
app/src/androidTest/java/com/rooney/rooneytest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/aidl/com/rooney/rooneytest/: CommonInterface.aidl
app/src/main/cpp/: native_lib.cpp  object_class.h
app/src/main/java/com/rooney/rooneytest/: CommonInterfaceAidl.java  CustomGlSurfaceView.java  MainActivity.java  Triangle.java  Util.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rooney/rooneytest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
